refactored auth and user controllers